--- a/psixolog.html
+++ b/psixolog.html
@@ -1,214 +1,203 @@
+
 <!doctype html>
 <html lang="ru">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Сюзан Мкртчян — Услуги</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Сюзан Мкртчян — Услуги</title>
 
-  <!-- Подключение шрифта Forum -->
-  <link href="https://fonts.googleapis.com/css2?family=Forum&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Forum&display=swap" rel="stylesheet">
 
-  <style>
-    :root {
-      --bg: #3B2A24;
-      --white: #ffffff;
-      --text: #1a120e;
-    }
+<style>
+:root {
+  --bg: #3B2A24;
+  --white: #ffffff;
+  --text: #1a120e;
+  --accent: #e9e2dd;
+  --hover: #795548;
+}
 
-    * { box-sizing: border-box; margin:0; padding:0; }
-    html, body { height: 100%; }
-    body {
-      font-family: 'Forum', serif;
-      color: var(--white);
-      background: var(--bg);
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-    }
+* { box-sizing: border-box; margin:0; padding:0; }
+html, body { height: 100%; }
+body {
+  font-family: 'Forum', serif;
+  color: var(--white);
+  background: var(--bg);
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
 
-    main { padding-top: 40px; }
+main { padding: 40px 0; }
 
-    .layout {
-      display: flex;
-      flex-direction: column; /* картинка сверху, текст под ней */
-      gap: clamp(16px, 3vw, 32px);
-      width: min(1200px, 100%);
-      margin: 0 auto 80px;
-      padding: clamp(16px, 4vw, 48px);
-      align-items: center;
-    }
+/* Секции */
+section {
+  display: flex;
+  gap: 40px;
+  width: min(1200px, 100%);
+  margin: 0 auto 80px;
+  padding: 0 20px;
+  align-items: center;
+  flex-wrap: wrap;
+}
 
-    .text-card {
-      background: var(--white);
-      color: var(--text);
-      padding: clamp(18px, 3vw, 36px);
-      border-radius: 16px;
-      box-shadow: 0 8px 20px rgba(0,0,0,.2);
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      opacity: 0;
-      transform: translateY(30px);
-      transition: opacity 0.8s ease, transform 0.8s ease;
-      font-size: 1.2em;
-      width: 100%;
-      max-width: 700px;
-    }
-    .text-card.visible { opacity: 1; transform: translateY(0); }
+section .image, section .text-card {
+  flex: 1 1 500px;
+}
 
-    .text-card h1 { margin-bottom: .5em; font-size: clamp(32px, 4vw, 48px); }
-    .text-card h3 { margin-top: 1em; margin-bottom: .5em; font-size: 1.4em; }
-    .text-card ul { margin-left: 1.2em; margin-bottom: 1em; }
-    .text-card ul li { margin-bottom: .5em; font-size: 1.15em; }
+/* Картинка */
+.image {
+  border-radius: 16px;
+  box-shadow: 0 8px 20px rgba(0,0,0,.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  opacity: 0;
+  transform: scale(0.95);
+  transition: opacity 0.8s ease, transform 0.8s ease;
+}
+.image.visible { opacity: 1; transform: scale(1); }
+.image img {
+  width: 100%;
+  height: auto;
+  max-height: 600px;
+  object-fit: cover;
+  transition: transform 0.3s ease-out;
+  will-change: transform;
+}
 
-    .image {
-      border-radius: 16px;
-      box-shadow: 0 8px 20px rgba(0,0,0,.2);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      opacity: 0;
-      transform: scale(0.98);
-      transition: opacity 0.8s ease, transform 0.8s ease;
-      overflow: hidden;
-      width: 100%;
-    }
-    .image.visible { opacity: 1; transform: scale(1); }
+/* Текст */
+.text-card {
+  background: var(--white);
+  color: var(--text);
+  padding: 30px;
+  border-radius: 16px;
+  box-shadow: 0 8px 20px rgba(0,0,0,.2);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  opacity: 0;
+  transform: translateY(30px);
+  transition: opacity 0.8s ease, transform 0.8s ease;
+  font-size: 1.2em;
+}
+.text-card.visible { opacity: 1; transform: translateY(0); }
+.text-card h1 { font-size: clamp(32px, 4vw, 48px); margin-bottom: 0.5em; }
+.text-card h3 { font-size: 1.4em; margin: 1em 0 0.5em; }
+.text-card ul { margin-left: 1.2em; margin-bottom: 1em; }
+.text-card ul li { margin-bottom: 0.5em; font-size: 1.15em; }
 
-    .image img {
-      display: block;
-      width: 100%;
-      max-width: none;
-      height: auto;
-      transition: transform 0.3s ease-out;
-      will-change: transform;
-    }
+/* Увеличение картинок для второй и третьей секции */
+section:nth-of-type(2) .image img,
+section:nth-of-type(3) .image img {
+  width: 110%;
+  max-width: none;
+}
 
-    /* Увеличение картинок */
-    section:nth-of-type(1) .image img { width: 105%; }
-    section:nth-of-type(2) .image img { width: 110%; }
-    section:nth-of-type(3) .image img { width: 110%; }
-
-    /* Адаптив для планшетов и мобилок */
-    @media (max-width: 900px) {
-      .text-card { font-size: 1.1em; padding: 18px; }
-      .text-card h1 { font-size: 2rem; }
-      .text-card h3 { font-size: 1.2rem; }
-      .text-card ul li { font-size: 1rem; }
-      .image img { width: 100%; max-height: 60vh; }
-    }
-
-    @media (max-width: 480px) {
-      .layout { padding: 10px; gap: 10px; }
-      .text-card { font-size: 1em; padding: 12px; }
-      .text-card h1 { font-size: 1.5em; }
-      .text-card h3 { font-size: 1.05em; }
-      .text-card ul li { font-size: 0.95em; }
-      .image img { max-height: 50vh; width: 100%; }
-    }
-  </style>
+/* Адаптив для мобильных */
+@media (max-width: 900px) {
+  section { flex-direction: column; gap: 24px; }
+  .image img { max-height: 70vh; width: 100%; }
+}
+</style>
 </head>
 <body>
-  <main>
-    <!-- 1 блок -->
-    <section class="layout">
-      <div class="image">
-        <img src="2.avif" alt="Психологическая сессия">
-      </div>
-      <div class="text-card">
-        <h1>Психологическая сессия</h1>
-        <h3>Как мы работаем:</h3>
-        <ul>
-          <li>Первая установочная сессия длительностью 30 минут — бесплатно</li>
-          <li>На ней мы знакомимся, уточняю ваш запрос, и вместе определяем, насколько мы подходим друг другу</li>
-          <li>Если продолжаем, процесс терапии строится индивидуально под ваш запрос</li>
-          <li>В работе использую разные подходы: спиральная динамика, архетипы, психоанализ, символ-драма</li>
-          <li>Часто комбинирую эти методы для максимального результата</li>
-          <li>Адаптирую процесс под каждого</li>
-        </ul>
-      </div>
-    </section>
+<main>
+  <section>
+    <div class="image">
+      <img src="2.avif" alt="Психологическая сессия">
+    </div>
+    <div class="text-card">
+      <h1>Психологическая сессия</h1>
+      <h3>Как мы работаем:</h3>
+      <ul>
+        <li>Первая установочная сессия длительностью 30 минут — бесплатно</li>
+        <li>Знакомимся и уточняем ваш запрос</li>
+        <li>Далее процесс терапии индивидуально под ваш запрос</li>
+        <li>Использую спиральную динамику, архетипы, психоанализ, символ-драма</li>
+        <li>Комбинирую методы для максимального результата</li>
+        <li>Адаптирую процесс под каждого</li>
+      </ul>
+    </div>
+  </section>
 
-    <!-- 2 блок -->
-    <section class="layout">
-      <div class="image">
-        <img src="3.avif" alt="Психология и имидж">
-      </div>
-      <div class="text-card">
-        <h1>Глубинная комплексная работа — психология и имидж</h1>
-        <h3>Кому подходит:</h3>
-        <ul>
-          <li>Тем, кто готов к масштабным внутренним изменениям</li>
-          <li>Тем, кто хочет сочетать трансформации с внешним выражением</li>
-          <li>Тем, кто ищет глубокую работу с личными сценариями</li>
-        </ul>
-        <h3>Как строится работа:</h3>
-        <ul>
-          <li>Формат — сессия 1,5–2 часа</li>
-          <li>Выбор времени и формата индивидуально</li>
-          <li>Выявляем барьеры, жизненные сценарии и архетипы</li>
-          <li>Одновременно работаем над имиджем</li>
-          <li>Создаю «карту личности»</li>
-          <li>По желанию — бренд-бук стиля</li>
-          <li>Ясная стратегия развития</li>
-        </ul>
-        <p><strong>Стоимость:</strong> от 70 000 ֏</p>
-      </div>
-    </section>
+  <section>
+    <div class="image">
+      <img src="3.avif" alt="Психология и имидж">
+    </div>
+    <div class="text-card">
+      <h1>Глубинная комплексная работа — психология и имидж</h1>
+      <h3>Кому подходит:</h3>
+      <ul>
+        <li>Тем, кто готов к масштабным внутренним изменениям</li>
+        <li>Тем, кто хочет сочетать трансформации с внешним выражением</li>
+        <li>Тем, кто ищет глубокую работу с личными сценариями</li>
+      </ul>
+      <h3>Как строится работа:</h3>
+      <ul>
+        <li>Сессия 1,5–2 часа</li>
+        <li>Выбор времени и формата индивидуально</li>
+        <li>Выявляем барьеры, сценарии и архетипы</li>
+        <li>Одновременно работаем над имиджем</li>
+        <li>Создаю «карту личности»</li>
+        <li>По желанию — бренд-бук стиля</li>
+        <li>Ясная стратегия развития</li>
+      </ul>
+      <p><strong>Стоимость:</strong> от 70 000 ֏</p>
+    </div>
+  </section>
 
-    <!-- 3 блок -->
-    <section class="layout">
-      <div class="image">
-        <img src="4.avif" alt="Психология, имидж и контент">
-      </div>
-      <div class="text-card">
-        <h1>Глубинная работа — психология, имидж и контент</h1>
-        <h3>Кому подходит:</h3>
-        <ul>
-          <li>Экспертам, блогерам и публичным личностям</li>
-          <li>Тем, кто хочет целостный имидж и контент</li>
-          <li>Тем, кто хочет уверенность и самопрезентацию</li>
-        </ul>
-        <h3>Как строится работа:</h3>
-        <ul>
-          <li>Формат — сессии от 1,5 часов</li>
-          <li>Проработка запроса через психоанализ и архетипы</li>
-          <li>Создание аутентичного имиджа</li>
-          <li>Уверенность перед камерой</li>
-          <li>Стратегия контента</li>
-          <li>Чек-листы и материалы</li>
-        </ul>
-        <p><strong>Стоимость:</strong> от 80 000 ֏</p>
-      </div>
-    </section>
-  </main>
+  <section>
+    <div class="image">
+      <img src="4.avif" alt="Психология, имидж и контент">
+    </div>
+    <div class="text-card">
+      <h1>Глубинная работа — психология, имидж и контент</h1>
+      <h3>Кому подходит:</h3>
+      <ul>
+        <li>Экспертам, блогерам и публичным личностям</li>
+        <li>Тем, кто хочет целостный имидж и контент</li>
+        <li>Тем, кто хочет уверенность и самопрезентацию</li>
+      </ul>
+      <h3>Как строится работа:</h3>
+      <ul>
+        <li>Сессии от 1,5 часов</li>
+        <li>Проработка запроса через психоанализ и архетипы</li>
+        <li>Создание аутентичного имиджа</li>
+        <li>Уверенность перед камерой</li>
+        <li>Стратегия контента</li>
+        <li>Чек-листы и материалы</li>
+      </ul>
+      <p><strong>Стоимость:</strong> от 80 000 ֏</p>
+    </div>
+  </section>
+</main>
 
-  <script>
-    const elements = document.querySelectorAll('.text-card, .image');
-    const observer = new IntersectionObserver(entries => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add('visible');
-          observer.unobserve(entry.target);
-        }
-      });
-    }, { threshold: 0.2 });
-    elements.forEach(el => observer.observe(el));
+<script>
+// Появление элементов
+const elements = document.querySelectorAll('.text-card, .image');
+const observer = new IntersectionObserver(entries => {
+  entries.forEach(entry => {
+    if (entry.isIntersecting) {
+      entry.target.classList.add('visible');
+      observer.unobserve(entry.target);
+    }
+  });
+}, { threshold: 0.2 });
+elements.forEach(el => observer.observe(el));
 
-    window.addEventListener('scroll', () => {
-      document.querySelectorAll('.image img').forEach(img => {
-        const rect = img.getBoundingClientRect();
-        const offset = rect.top / window.innerHeight;
-        img.style.transform = `translateY(${offset * 20 - 10}px)`;
-      });
-    });
-  </script>
+// Параллакс картинок
+window.addEventListener('scroll', () => {
+  document.querySelectorAll('.image img').forEach(img => {
+    const rect = img.getBoundingClientRect();
+    const offset = rect.top / window.innerHeight;
+    img.style.transform = `translateY(${offset * 20 - 10}px)`;
+  });
+});
+</script>
 </body>
 </html>
-
-
-
-
 
 
 
