--- a/services1.html
+++ b/services1.html
@@ -9,6 +9,19 @@
 <link href="https://fonts.googleapis.com/css2?family=Forum&display=swap" rel="stylesheet">
 
 <style>
+  /* Початковий стан */
+.text, .image {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: all 0.8s ease;
+}
+
+/* Коли елемент з’являється */
+.text.visible, .image.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
   :root {
     --bg: #3B2A24;
     --white: #ffffff;
@@ -477,6 +490,7 @@
   </script>
 </body>
 </html>
+
 
 
 
