--- a/psixolog.html
+++ b/psixolog.html
@@ -118,6 +118,8 @@ section:nth-of-type(3) .image img {
         <li>Использую спиральную динамику, архетипы, психоанализ, символ-драма</li>
         <li>Комбинирую методы для максимального результата</li>
         <li>Адаптирую процесс под каждого</li>
+        <li>Сессия очно/онлайн 3000₽/15000֏ </li>
+        <li>Пакет из 5 сессий 10.000₽/50.000֏  </li> 
       </ul>
     </div>
   </section>
@@ -198,6 +200,7 @@ window.addEventListener('scroll', () => {
 </script>
 </body>
 </html>
+
 
 
 
