--- a/services1.html
+++ b/services1.html
@@ -166,7 +166,7 @@
     <section class="service">
       <div class="layout">
         <div class="image">
-          <img src="https://design.pibig.info/uploads/posts/2023-03/1679632064_design-pibig-info-p-garderobnaya-mebel-dizain-vkontakte-72.jpg" alt="Разбор гардероба">
+          <img src="72.jpg" alt="Разбор гардероба">
         </div>
         <div class="text">
           <h2>Разбор гардероба</h2>
@@ -489,6 +489,7 @@
   </script>
 </body>
 </html>
+
 
 
 
