Update print statement from 'Hello' to 'Goodbye'

--- a/services1.html
+++ b/services1.html
@@ -189,8 +189,8 @@
 
       <h4>Стоимость:</h4>
       <p>
-        Базовый пакет (1,5–3 часа) — <strong>50 000֏</strong><br>
-        Каждый дополнительный час — <strong>12 000֏</strong><br>
+        Базовый пакет (1,5–3 часа) — <strong>50 000֏/11000₽</strong><br>
+        Каждый дополнительный час — <strong>12 000֏/3000₽</strong><br>
         Оплата доступна в рублях и долларах по актуальному курсу
       </p>
     </div>
@@ -230,8 +230,8 @@
 
       <h4>Стоимость:</h4>
       <p>
-        Базовый пакет до 2 часов — <strong>45 000֏</strong><br>
-        Каждый дополнительный час — <strong>12 000֏</strong><br>
+        Базовый пакет до 2 часов — <strong>45 000֏/10000₽</strong><br>
+        Каждый дополнительный час — <strong>12 000֏/3000₽</strong><br>
         Оплата возможна в рублях и долларах по актуальному курсу
       </p>
     </div>
@@ -267,7 +267,7 @@
       <ul>
         <li>Лично или онлайн</li>
         <li>Длительность: 1 час</li>
-        <li>Стоимость: <strong>15 000֏</strong></li>
+        <li>Стоимость: <strong>15 000֏/4000₽</strong></li>
         <li>Оплата возможна в рублях и долларах по актуальному курсу</li>
       </ul>
 
@@ -288,32 +288,32 @@
 
       <h4>Форматы работы:</h4>
       <ul>
-        <li><strong>Часовая съёмка в одной локации</strong> — 20 000֏<br>
+        <li><strong>Часовая съёмка в одной локации</strong> — 20 000֏/5000₽<br>
           Съёмка контента для Stories, постов, Reels<br>
           Весь отснятый материал + 1 смонтированный Reels
         </li>
-        <li><strong>Съёмка мероприятий</strong> — от 30 000֏/час<br>
+        <li><strong>Съёмка мероприятий</strong> — от 30 000֏/7000₽час<br>
           День рождения, выступления, поездки<br>
           Весь отснятый материал + монтаж 1–2 Reels по договорённости
         </li>
-        <li><strong>Пакет из 10 часов съёмок</strong> — 80 000֏<br>
+        <li><strong>Пакет из 10 часов съёмок</strong> — 80 000֏/17000₽<br>
           10 часов в студии или выбранной локации<br>
           Монтаж 10 Reels (по 1 видео на час съёмки)
         </li>
-        <li><strong>Стратегия контента</strong> — 60 000֏<br>
+        <li><strong>Стратегия контента</strong> — 60 000֏/13000₽<br>
           Живое или онлайн-общение<br>
           Разбор целей, визуала, рубрик, форматов<br>
           Подборка приложений для создания визуала
         </li>
-        <li><strong>Стратегия + сопровождение</strong> — 100 000֏/мес<br>
+        <li><strong>Стратегия + сопровождение</strong> — 100 000֏/21000₽мес<br>
           Полный разбор, помощь с реализацией<br>
           Регулярная обратная связь в течение месяца
         </li>
-        <li><strong>Полный пакет</strong> — 200 000֏<br>
+        <li><strong>Полный пакет</strong> — 200 000֏/41000₽<br>
           Стратегическая сессия, съёмка 10 Reels<br>
           Поддержка в течение месяца
         </li>
-        <li><strong>Полное ведение Instagram</strong> — от 250 000֏<br>
+        <li><strong>Полное ведение Instagram</strong> — от 250 000֏/51000₽<br>
           Съёмка 10 часов (10 Reels или другой контент)<br>
           Помощь с визуалом, текстами, темами и рубриками<br>
           Брендинг, создание сторис, постоянная поддержка
@@ -322,8 +322,8 @@
 
       <h4>Важно:</h4>
       <ul>
-        <li>Каждый дополнительный монтаж — 5 000֏</li>
-        <li>Помощь с идеями (до 10 идей) — 10 000֏</li>
+        <li>Каждый дополнительный монтаж — 5 000֏/2000₽</li>
+        <li>Помощь с идеями (до 10 идей) — 10 000֏/3000₽</li>
         <li>Выезды вне малого центра Еревана — оплата трансфера клиентом</li>
         <li>Время ожидания свыше 20 минут оплачивается отдельно</li>
       </ul>
@@ -355,7 +355,7 @@
 
       <h4>Стоимость:</h4>
       <ul>
-        <li><strong>30 000֏</strong></li>
+        <li><strong>30 000֏/7000₽</strong></li>
         <li>Оплата возможна в рублях и долларах по актуальному курсу</li>
       </ul>
     </div>
@@ -390,7 +390,7 @@
       <h4>Формат и стоимость:</h4>
       <ul>
         <li>Онлайн или оффлайн</li>
-        <li><strong>25 000֏</strong> / 1 чемодан / ручная кладь</li>
+        <li><strong>25 000֏/6000₽</strong> / 1 чемодан / ручная кладь</li>
         <li>Оплата возможна в рублях и долларах по актуальному курсу</li>
       </ul>
     </div>
@@ -419,7 +419,7 @@
 
       <h4>Стоимость:</h4>
       <ul>
-        <li><strong>от 18 000֏</strong></li>
+        <li><strong>от 18 000֏/4000₽</strong></li>
         <li>Оплата возможна в рублях и долларах по актуальному курсу</li>
       </ul>
     </div>
@@ -489,6 +489,7 @@
   </script>
 </body>
 </html>
+
 
 
 
