--- a/psixolog.html
+++ b/psixolog.html
@@ -146,7 +146,7 @@ section:nth-of-type(3) .image img {
         <li>По желанию — бренд-бук стиля</li>
         <li>Ясная стратегия развития</li>
       </ul>
-      <p><strong>Стоимость:</strong> от 70 000 ֏</p>
+      <p><strong>Стоимость:</strong> от 14.000₽/70 000 ֏</p>
     </div>
   </section>
 
@@ -171,7 +171,7 @@ section:nth-of-type(3) .image img {
         <li>Стратегия контента</li>
         <li>Чек-листы и материалы</li>
       </ul>
-      <p><strong>Стоимость:</strong> от 80 000 ֏</p>
+      <p><strong>Стоимость:</strong> от 16.000₽/80 000 ֏</p>
     </div>
   </section>
 </main>
@@ -200,6 +200,7 @@ window.addEventListener('scroll', () => {
 </script>
 </body>
 </html>
+
 
 
 
